--- a/index.html
+++ b/index.html
@@ -319,17 +319,14 @@
             </p>
             
             <div class="contact-links">
-                <a href="https://t.me/ваш_ник" target="_blank" class="contact-link">
+                <a href="https://t.me/SamJavaDev" target="_blank" class="contact-link">
                     <i class="fab fa-telegram"></i>
                 </a>
-                <a href="https://github.com/ваш_ник" target="_blank" class="contact-link">
+                <a href="https://github.com/ShCod86" target="_blank" class="contact-link">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="mailto:ваш@email.com" target="_blank" class="contact-link">
+                <a href="samjavadev@mail.ru" target="_blank" class="contact-link">
                     <i class="fas fa-envelope"></i>
-                </a>
-                <a href="https://linkedin.com/in/ваш_ник" target="_blank" class="contact-link">
-                    <i class="fab fa-linkedin"></i>
                 </a>
             </div>
         </div>
