--- a/index.html
+++ b/index.html
@@ -258,7 +258,18 @@
             <h2 class="section-title">Мои учебные проекты</h2>
             <div class="projects-grid">
                 <div class="project-card">
+                     <img src="assets\Logo Skillbox Black.svg" alt="Новостной портал" class="project-img">
+                    <div class="project-info">
+                        <h3 class="project-title">Новостной портал</h3>
+                        <p>Backend-приложение для управления новостным порталом с системой пользователей, категорий, новостей и комментариев.</p>
+                        <div class="project-links">
+                            <!-- <a href="#" class="btn">Демо</a> -->
+                            <a href="https://github.com/ShCod86/spring-boot-news-portal.git" class="btn btn-outline">Код</a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="project-card">
                     <img src="assets\Logo Skillbox Black.svg" alt="Поисковая система для веб-сайтов" class="project-img">
                     <div class="project-info">
                         <h3 class="project-title">Поисковая система для веб-сайтов</h3>
